fix logo wrap

--- a/styles/components/asset/_asset.scss
+++ b/styles/components/asset/_asset.scss
@@ -1,5 +1,6 @@
 @mixin base() {
     margin-bottom: space(2);
+    padding-right: space(2);
 }
 
 .asset {
