--- a/styles/components/section/_content.scss
+++ b/styles/components/section/_content.scss
@@ -1,6 +1,11 @@
 @mixin base() {
     margin-bottom: space(2);
 
+    @media screen and (min-width: breakpoint(medium)) {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
 }
 
 &__content {
